<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AppFragment">
    
    <EditText
        android:id="@+id/nameTextEdit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/name_text_edit_hint"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/ageTextEdit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextEdit"
        android:hint="@string/age_text_edit_hint"/>

    <Switch
        android:id="@+id/activeSwitch"
        android:layout_width="170dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageTextEdit"
        android:text="@string/switch_string"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/viewButton"
        android:layout_width="100dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activeSwitch"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_design"
        style="@style/ButtonStyle"
        android:text="@string/view_button_text"/>
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="100dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toEndOf="@id/viewButton"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/activeSwitch"
        android:layout_marginTop="15dp"
        style="@style/ButtonStyle"
        android:background="@drawable/button_design"
        android:text="@string/DELETE"
        />

    <Button
        android:id="@+id/addButton"
        android:layout_width="80dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toEndOf="@id/deleteButton"
        app:layout_constraintTop_toBottomOf="@id/activeSwitch"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_design"
        style="@style/ButtonStyle"
        android:text="@string/add_button_text"/>
    <Button
        android:id="@+id/updateButton"
        android:layout_width="105dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toEndOf="@id/addButton"
        app:layout_constraintTop_toBottomOf="@id/activeSwitch"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        style="@style/ButtonStyle"
        android:background="@drawable/button_design"
        android:text="@string/UPDATE"/>

    <EditText
        android:id="@+id/search_view"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/activeSwitch"
        app:layout_constraintTop_toBottomOf="@id/ageTextEdit"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/customerList"
        android:layout_width="400dp"
        android:layout_height="530dp"
        app:layout_constraintTop_toBottomOf="@id/activeSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp" />


</androidx.constraintlayout.widget.ConstraintLayout>